# irda-svn

CVSROOT/: checkoutlist  loginfo  loginfo.pl
irda/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  irda.lsm  irda.lsm.in  irdasuse.spec.in
irda-utils/: Makefile  README.lyx  README.txt  irda-utils.spec
irda-utils/etc/: Makefile  drivers  irda  irda.rc  irda.sysconfig  modules.conf.irda  network  network.redhat
irda-utils/findchip/: Makefile  findchip.c  nsc.c  smc.c
irda-utils/include/: irda.h
irda-utils/irattach/: ChangeLog  Makefile  README  dongle_attach.c  irattach.c  irmanager.c  irmanager.h  util.c
irda-utils/irdadump/: ChangeLog  Makefile  Makefile.in  README  README.lyx  README.sgml  README.txt  aclocal.m4  autogen.sh  config.cache  config.h  config.status  configure  configure.in  irdadump.c  libtool  obex.c  obex.h
irda-utils/irdaping/: Makefile  README.lyx  README.sgml  irdaping.c
irda-utils/irnetd/: Makefile
irda-utils/irsockets/: Makefile  ias_query.c  irdaspray.c
irda-utils/man/: CHANGES  Makefile  README  TODO  man-findchip.sgml  man-irattach-inc.sgml  man-irattach.sgml  man-irda-template.sgml  man-irdadump-inc.sgml  man-irdadump.sgml  man-irdaping.sgml  man-irpsion5.sgml
irda-utils/patches/: findchip.patch  irattach.patch  irdadump.patch  psion.patch
irda-utils/psion/: Makefile  irpsion5.c
irda-utils/smcinit/: RobMiller-irda.html  smcinit.c  tosh1800-smcinit.c  tosh2450-smcinit.c
irda-utils/tekram/: Makefile
irda/src/: .cvsignore  Makefile.am  irdamain.h  irias.c  irias.h  main.c
irda/src/.deps/: irda-irias.Po  irda-main.Po
smcinit/: .cvsignore  AUTHORS  CHANGELOG.Peri  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.Tom  autogen.sh  boot.smcinit  boot.smcinit.rhmdk  config.h  config.h.in  configure  configure.ac  makerpmredhat.sh  makerpmsuse.sh  smcinit  smcinit.7  smcinit.8  smcinit.c  smcinit.lsm  smcinit.lsm.in  smcinit.sysconfig  smcinitredhat.spec.in  smcinitsuse.spec  smcinitsuse.spec.in  tosh-smcinit.c  tosh-superio.h  tosh1800-smcinit.8  tosh1800-smcinit.c  tosh2450-smcinit.c  tosh5100-smcinit.8  tosh5100-smcinit.c
www/: .wmlrc  Makefile  Makefile.cfg  README  gimp-irda.pl  sync-ftpirda  sync-wwwirda
www/common/: chipsets.pl  layout1.inc  layout2.inc  menu.inc  news.pl  post-h.inc  pre-h.inc  tags.inc
www/data/: about.inc  chipsets.inc  companies.inc  contact.inc  (+7 more)
(+68 files in other folders)
