

AC_INIT(irda,0.1)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE([1.6 dist-bzip2])

RELEASE=1
AC_SUBST(VERSION)
AC_SUBST(RELEASE)


dnl Check for various programs
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_CC


dnl Check for headers



AC_CONFIG_FILES(
Makefile src/Makefile doc/Makefile
irda.lsm irdasuse.spec
)

AC_OUTPUT

